--- a/main/home/templates/contact.html
+++ b/main/home/templates/contact.html
@@ -47,167 +47,16 @@ home-style3 contact-pg-1
           <h6 class="fsz-18 fw-bold text-uppercase mb-30">آماده کار با ما</h6>
           <div class="checkout-form mt-50">
             <div class="row">
-              <div class="col-lg-7">
-                <p class="fsz-16 color-666 mb-30">
-                  برای همه سوالات و نظرات خود با ما تماس بگیرید
-                </p>
-                <form class="form">
-                  <div class="form-content">
-                    <div class="row gx-3">
-                      <div class="col-lg-6">
-                        <div class="form-group mb-4">
-                          <label for=""
-                            >نام<span class="color-red1">*</span>
-                          </label>
-                          <input
-                            class="form-control"
-                            placeholder=""
-                            type="text"
-                          />
-                        </div>
-                      </div>
-                      <div class="col-lg-6">
-                        <div class="form-group mb-4">
-                          <label for=""
-                            >نام خانوادگی<span class="color-red1">*</span>
-                          </label>
-                          <input
-                            class="form-control"
-                            placeholder=""
-                            type="text"
-                          />
-                        </div>
-                      </div>
-                      <div class="col-lg-12">
-                        <div class="form-group mb-4">
-                          <label for=""
-                            >آدرس ایمیل<span class="color-red1">*</span>
-                          </label>
-                          <input
-                            class="form-control"
-                            placeholder=""
-                            type="text"
-                          />
-                        </div>
-                      </div>
-                      <div class="col-lg-12">
-                        <div class="form-group mb-4">
-                          <label for=""
-                            >شماره تلفن<span class="color-666"
-                              >(اختیاری)</span
-                            >
-                          </label>
-                          <input
-                            class="form-control"
-                            placeholder=""
-                            type="text"
-                          />
-                        </div>
-                      </div>
-                      <div class="col-lg-12">
-                        <div class="form-group mb-4">
-                          <label for=""
-                            >کشور / منطقه<span class="color-red1">*</span>
-                          </label>
-                          <select
-                            class="form-control form-select"
-                            id=""
-                            name=""
-                          >
-                            <option value="">
-                              ایالات متحده (ایالات متحده)
-                            </option>
-                            <option value="">
-                              ایالات متحده (ایالات متحده)
-                            </option>
-                          </select>
-                        </div>
-                      </div>
-                      <div class="col-lg-12">
-                        <div class="form-group mb-4">
-                          <label for=""
-                            >موضوع<span class="color-666">(اختیاری)</span>
-                          </label>
-                          <input
-                            class="form-control"
-                            placeholder=""
-                            type="text"
-                          />
-                        </div>
-                      </div>
-                      <div class="col-lg-12">
-                        <div class="form-group mb-4">
-                          <label for="">پیام</label>
-                          <textarea
-                            class="form-control"
-                            name=""
-                            placeholder="یادداشت درباره ما سفارش شما ، به عنوان مثال یادداشت ویژه برای تحویل"
-                            rows="5"
-                          ></textarea>
-                        </div>
-                      </div>
-                      <div class="col-lg-12">
-                        <div class="form-check">
-                          <input
-                            class="form-check-input"
-                            id="account"
-                            type="checkbox"
-                            value=""
-                          />
-                          <label class="form-check-label" for="account"
-                            >من می خواهم یک بار اخبار و به روزرسانی ها را
-                            دریافت کنم.با ارسال ، من با<a
-                              class="color-green2 text-decoration-underline"
-                              href="#"
-                              >شرایط و ضوابط</a
-                            >
-                          </label>
-                        </div>
-                      </div>
-                      <div class="col-lg-12">
-                        <a
-                          class="butn bg-green2 text-white radius-4 fw-500 fsz-12 text-uppercase text-center mt-50 py-3"
-                          href="#"
-                        >
-                          <span>ارسال پیام</span>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </form>
-              </div>
+              
               <div class="col-lg-5">
                 <div class="contact-info mt-5 mt-lg-0">
                   <div class="contact-info-card">
-                    <small class="fsz-12 color-666 text-uppercase mb-20"
-                      >ایالات متحده (دفتر مرکزی)</small
-                    >
+                    
+          
                     <ul class="fsz-16 lh-lg">
                       <li>
                         <a href="#"
-                          >152 خیابان جاده تاچر ، منهتن ، 10463 ، ایالات
-                          متحده</a
-                        >
-                      </li>
-                      <li>
-                        <a href="#">(+025) 3886 25 16</a>
-                      </li>
-                      <li>
-                        <a
-                          class="color-green2 text-decoration-underline"
-                          href="#"
-                          >hello@swattechmart.com</a
-                        >
-                      </li>
-                    </ul>
-                    <small class="fsz-12 color-666 text-uppercase mb-20 mt-50"
-                      >انگلستان (شعبه)</small
-                    >
-                    <ul class="fsz-16 lh-lg">
-                      <li>
-                        <a href="#"
-                          >12 خیابان باکینگهام ، تورنتوایت ، HG3 4ty ،
-                          انگلستان</a
+                          >{{company_info.address}}</a
                         >
                       </li>
                       <li>
@@ -222,20 +71,12 @@ home-style3 contact-pg-1
                       </li>
                     </ul>
                     <div class="social-icons mt-50">
-                      <a href="#"> <i class="fab fa-twitter"></i> </a>
-                      <a href="#"> <i class="fab fa-facebook-f"></i> </a>
+                      
                       <a href="#"> <i class="fab fa-instagram"></i> </a>
-                      <a href="#"> <i class="fab fa-youtube"></i> </a>
-                      <a href="#"> <i class="fab fa-pinterest"></i> </a>
+                     
                     </div>
                   </div>
-                  <div class="img th-380 mt-10">
-                    <img
-                      alt=""
-                      class="img-cover radius-4"
-                      src="assets/img/contact.png"
-                    />
-                  </div>
+                 
                 </div>
               </div>
             </div>
