--- a/main/carts/templates/cart.html
+++ b/main/carts/templates/cart.html
@@ -8,6 +8,10 @@
 <link href="{% static 'css/home_1_style.rtl.css' %}" rel="stylesheet" />
 {% endblock %}
 
+{% block js %}
+<script src="{% static 'pages/js/cart.js' %}"></script>
+{% endblock %}
+
 {% block content %}
     <!-- لودینگ overlay -->
     <div class="loading-overlay" id="loading-overlay">
@@ -25,12 +29,12 @@
                 </div>
                 <div class="cart-body">
                     {% for item in cart_items %}
-                    <div class="product-card">
+                    <div class="product-card" data-product-id="{{ item.product.id }}" data-variant-id="{{ item.productvariant.id }}">
                         <img src="{{ item.product.image.url }}" alt="{{ item.product.title }}" class="product-img">
                         <div class="product-info">
                             <h6 class="product-title">{{ item.product.title }}</h6>
                             <p class="product-variant">{{ item.productvariant.name }}: {{ item.productvariant.value }}</p>
-                            <p class="product-price">{{ item.price|floatformat:"0" }} تومان</p>
+                            <p class="product-price" data-price="{{ item.price|floatformat:"0" }}">{{ item.price|floatformat:"0" }} تومان</p>
                             
                             <div class="quantity-control">
                                 <!-- دکمه کاهش -->
@@ -83,14 +87,6 @@
                 <div class="summary-item">
                     <span>تعداد کل</span>
                     <span id="total-items">{{ cart_items|length }}</span>
-                </div>
-                <div class="summary-item">
-                    <span>جمع کل</span>
-                    <span id="total-price">{{ total_price|floatformat:"0" }}</span> تومان
-                </div>
-                <div class="summary-item">
-                    <span>تخفیف</span>
-                    <span class="text-danger">0 تومان</span>
                 </div>
                 <div class="summary-item summary-total">
                     <span>مبلغ قابل پرداخت</span>
